[gd_scene load_steps=9 format=2]

[ext_resource path="res://autocalibrate.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_color = Color( 0, 0, 1, 1 )

[node name="root" type="Spatial"]
script = ExtResource( 1 )

[node name="set1" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64.8189, 27.7795, 0 )

[node name="pt00" type="MeshInstance" parent="set1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.30996, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="pt01" type="MeshInstance" parent="set1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.23125, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="pt02" type="MeshInstance" parent="set1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.23125, 10.1656, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="pt03" type="MeshInstance" parent="set1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.30996, 10.1656, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="pt04" type="MeshInstance" parent="set1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.08013, 5.64354, 7.02677 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="set2" type="Position3D" parent="."]
transform = Transform( 8.51927, 2.68254e-07, -2.90552, 2.08667, 6.26354, 6.11833, 2.02184, -6.46437, 5.92824, -40.4915, 39.7896, 21.4274 )

[node name="pt00" type="MeshInstance" parent="set2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.30996, -4.54534, 0.885782 )
mesh = SubResource( 3 )
material/0 = null

[node name="pt01" type="MeshInstance" parent="set2"]
transform = Transform( 1, -4.47035e-08, 8.9407e-08, 0, 1, 2.98023e-08, -1.49012e-08, 2.98023e-08, 1, 0.461781, -10.6273, 0.885781 )
mesh = SubResource( 3 )
material/0 = null

[node name="pt02" type="MeshInstance" parent="set2"]
transform = Transform( 1, -4.47035e-08, 8.9407e-08, 0, 1, 2.98023e-08, -1.49012e-08, 2.98023e-08, 1, 0.461781, 8.848, 0.885782 )
mesh = SubResource( 3 )
material/0 = null

[node name="pt03" type="MeshInstance" parent="set2"]
transform = Transform( 1, -2.98023e-08, 5.96046e-08, 0, 1, 1.78814e-07, -1.49012e-08, 2.98023e-08, 1, -7.2907, -4.54534, 0.885781 )
mesh = SubResource( 3 )
material/0 = null

[node name="pt04" type="MeshInstance" parent="set2"]
transform = Transform( 1, -4.47035e-08, 1.19209e-07, 0, 1, 2.08616e-07, -1.49012e-08, 2.98023e-08, 1, 1.2709, -4.54534, 7.00452 )
mesh = SubResource( 3 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 64.8189, 35.7294, 38.6849 )
fov = 50.0
far = 1000.0

[node name="ref_axis" type="Spatial" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )

[node name="x" type="MeshInstance" parent="ref_axis"]
transform = Transform( 5, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.5, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="y" type="MeshInstance" parent="ref_axis"]
transform = Transform( 0.01, 0, 0, 0, 5, 0, 0, 0, 0.01, 0, 2.5, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 5 )
material/0 = null

[node name="z" type="MeshInstance" parent="ref_axis"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 5, 0, 0, 2.5 )
material_override = SubResource( 7 )
mesh = SubResource( 5 )
material/0 = null

[node name="mm_axis" type="Spatial" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )

[node name="x" type="MeshInstance" parent="mm_axis"]
transform = Transform( 5, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 2.5, 0, 0 )
material_override = SubResource( 4 )
mesh = SubResource( 5 )
material/0 = null

[node name="y" type="MeshInstance" parent="mm_axis"]
transform = Transform( 0.01, 0, 0, 0, 5, 0, 0, 0, 0.01, 0, 2.5, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 5 )
material/0 = null

[node name="z" type="MeshInstance" parent="mm_axis"]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 5, 0, 0, 2.5 )
material_override = SubResource( 7 )
mesh = SubResource( 5 )
material/0 = null
